# discord-bot

./: Cargo.toml  README.md  Shuttle.toml
src/: commands.rs  event_handler.rs  lib.rs  main.rs
