[package]
name = "discobot"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.28.0"
shuttle-runtime = "0.28.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
shuttle-secrets = "0.28.0"
tokio = "1.26.0"
tracing = "0.1.37"
roux = "2.2.9"